# birdnet

./: .gitignore  BirdIDNameMatch.csv  README.md  check_metadata.py  environment.yml  idToLables.csv  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_rpi.txt
birdnet_mini/: audio.py  classifier.py  cli.py  file_reader.py  live_input.py  main.py  metadata.py  model.py  result_writer.py  serial-send.py  transmission.py
testdata/: orig_result.txt
