[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "birdnet-mini"
authors = [
    {name = "Christian Weigel", email = "christian.weigel@idmt.fraunhofer.de"},
]
description = "Proof of concept for song bird classification."
readme = "README.md"
requires-python = ">=3.11"

scripts = {birdnetmini = "birdnet_mini.cli:main"}

classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["requirements.txt", "birdnet_mini", "birdnet_mini.models"]
exclude = ["devenv.yml"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "birdnet_mini/_version.py"
